// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropdownIcon component arrow direction - bottom 1`] = `
<svg
  className="sc-bdVaJa jBPbFr"
  fill="currentColor"
  height="1em"
  stroke="currentColor"
  strokeWidth="0"
  viewBox="0 0 448 512"
  width="1em"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
  />
</svg>
`;

exports[`DropdownIcon component arrow direction - left 1`] = `
<svg
  className="sc-bdVaJa jBPbFr"
  height="20"
  viewBox="0 0 24 24"
  width="20"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M14 8l-4 4 4 4"
    fill="none"
    fillRule="evenodd"
    stroke="currentColor"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth="1"
  />
</svg>
`;

exports[`DropdownIcon component arrow direction - right 1`] = `
<svg
  className="sc-bdVaJa jBPbFr"
  height="20"
  viewBox="0 0 24 24"
  width="20"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M10 8l4 4-4 4"
    fill="none"
    fillRule="evenodd"
    stroke="currentColor"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth="1"
  />
</svg>
`;

exports[`DropdownIcon component arrow direction - unknown 1`] = `
<svg
  className="sc-bdVaJa jBPbFr"
  fill="currentColor"
  height="1em"
  stroke="currentColor"
  strokeWidth="0"
  viewBox="0 0 448 512"
  width="1em"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
  />
</svg>
`;

exports[`DropdownIcon component className prop 1`] = `
<svg
  className="sc-bdVaJa jBPbFr TEST"
  fill="currentColor"
  height="1em"
  stroke="currentColor"
  strokeWidth="0"
  viewBox="0 0 448 512"
  width="1em"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
  />
</svg>
`;

exports[`DropdownIcon component default snapshot 1`] = `
<svg
  className="sc-bdVaJa jBPbFr"
  fill="currentColor"
  height="1em"
  stroke="currentColor"
  strokeWidth="0"
  viewBox="0 0 448 512"
  width="1em"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
  />
</svg>
`;

exports[`DropdownIcon component disabled prop 1`] = `
<svg
  className="sc-bdVaJa jBPbFr"
  fill="currentColor"
  height="1em"
  stroke="currentColor"
  strokeWidth="0"
  viewBox="0 0 448 512"
  width="1em"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
  />
</svg>
`;

exports[`DropdownIcon component disabledClassName prop 1`] = `
<svg
  className="sc-bdVaJa jBPbFr TEST"
  fill="currentColor"
  height="1em"
  stroke="currentColor"
  strokeWidth="0"
  viewBox="0 0 448 512"
  width="1em"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
  />
</svg>
`;
